fix z-index

--- a/src/components/UI/Toggle/Toggle.module.css
+++ b/src/components/UI/Toggle/Toggle.module.css
@@ -18,7 +18,7 @@
     -ms-flex-align: center;
     align-items: center;
     box-sizing: border-box;
-    z-index: 996;
+    z-index: 995;
 }
 .right {
     left: auto;
